codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_enabled.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                            │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  ← for agents · ? shortcuts                                 100% context left  "
