codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_help.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                            │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"┃                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  / for commands                             ! for shell commands               "
"  ctrl + j for newline                       tab to submit message              "
"  @ for file paths                           ctrl + v to paste images           "
"  ctrl + g to edit in external editor        esc esc to edit previous message   "
"  ctrl + r search history                    ctrl + c to exit                   "
"  ⌥ + , reasoning down                       ⌥ + . reasoning up                 "
"  ctrl + t to view transcript                                                   "
"  ← for agents (empty prompt)                                                   "
"                                                                                "
"  customize shortcuts with /keymap                                              "
