codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__file_popup_ignores_bare_shell_parameter_with_matching_skill.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Searching files…                                                                                  "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"┃ › @src  $_                                                                                       │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"┃                                                                                                  │"
"╰ ↑↓ navigate · esc close ─────────────────────────────────────────────────────────────────────────╯"
